fix datepicker color in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -16,6 +16,8 @@
 	--button-icon: white;
 	--text-shadow: none;
 
+	--date-picker-bg: white;
+
 	font-family: Outfit;
 	color: var(--text);
 }
@@ -29,6 +31,8 @@
 	--green: #4ee8a8;
 	--button-icon: #e8e6f0;
 	--text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
+
+	--date-picker-bg: var(--bg2);
 }
 
 html,
